# keyvalues3

./: .editorconfig  .gitignore  =4.3.2  LICENSE  README.md  __init__.py  binarywriter.py  keyvalues3.py  kv3.py  kv3reader.py  pyproject.toml  requirements.txt  setup.py
.gemini/: settings.json
.github/workflows/: gemini-cli.yml  release.yml  test.yml
keyvalues3/: __init__.py  binaryreader.py  binarywriter.py  keyvalues3.py  kv3file.py  textreader.py  textwriter.py
keyvalues3/utils/: __init__.py  buffer.py  compression.py  helpers.py
tests/: README_RESOURCE_INTEGRATION.md  example.kv3  resource_parser.py  stresstest.py  test_api.py  test_binaryreader.py  test_binarywriter.py  test_general_api.py  test_kv3file.py  test_repr.py  test_resource_parser.py  test_textreader.py  test_textwriter.py
tests/documents/: arrays.kv3  byte_arrays.kv3  example.kv3  example_binary.kv3  not_kv3.kv3  numbers.kv3  objects.kv3  slick_jaguar_white.vcompmat  strings.kv3  weird_header_whitespace.kv3
tests/documents/binary/: example_lz4.kv3
tests/documents/resource/: example.vdata  example_lz4.vdata  example_lz4_realistic.vrf  example_realistic.vrf  lightmap_query_data.vdata  lightmap_query_data_realistic.vrf
